test(duplicates): refactor assertions to use getFirst() for clarity